@@ -1,10 +1,12 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2007-01-08
+ChangeLog - 2007-01-09
 
 
 Version 0.2.3 (under dev!):
+   * fixed display bugs with nicklist at top/bottom when look_nicklist_separator
+     is OFF (bug #18737)
    * fixed iconv problem, causing truncated words when using iso locale
    * fixed topic scroll when topic has multi-bytes chars
    * fixed compilation problem with iconv under FreeBSD
